2008-12-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c: Removed mention of -write from composite and
	convert help output since it can't work as specified with current
	command line architecture.
	* doc/options.imdoc: Removed documentation for composite and
	convert since it doesn't work.

2008-12-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage, WriteTIFFImage) Support reading
	and writing 64-bit integer TIFF.
	* magick/constitute.c (ImportViewPixelArea): Add support for
	importing 64-bit integer values.
	(ImportViewPixelArea): Add support for exporting 64-bit integer
	values.

2008-12-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Fix bug with reading one bit per
	sample RGB images.

2008-12-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (OpenCache): Fix a code ordering problem
	which results in 'identify' throwing an assertion for PseudoClass
	image files.  This bug was added in the 1.3.2 release.
	* coders/tiff.c (ReadTIFFImage): Fix bug with 'ping' mode.

2008-12-07  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/fits.c: Proper signed to unsigned conversion for 64 bit LSB images.

2008-12-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/Makefile.am: When X11 is disabled, don't compile the
	X11-specific source modules.  Don't ever install any X11-related
	header files.

2008-12-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/segment.c (SegmentImage): Use 'double' rather than 64-bit
	integer to accumulate totalized values.  Make the cluster summary
	report more concise.

2008-12-06  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/fits.c: Fix for 64 bit images.

2008-12-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/segment.c (SegmentImage): Cluster threshold is expressed
	as a percentage of total cluster pixels.  Optimize for larger
	images.
