@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020081211"
+#define public MagickPackageVersionAddendum ".020081212"
 #define public MagickPackageReleaseDate "unreleased"
