@@ -3416,7 +3416,7 @@ static void CompositeUsage(void)
       "                     Constant, Edge, Mirror, or Tile",
       "-watermark geometry  percent brightness and saturation of a watermark",
       "-white-point point   chomaticity white point",
-/*       "-write filename      write images to this file", */
+      "-write filename      write image to this file",
       (char *) NULL
     };
 
@@ -5446,7 +5446,7 @@ static void ConvertUsage(void)
       "-white-point point   chomaticity white point",
       "-white-threshold value",
       "                     pixels above the threshold become white",
-/*       "-write filename      write images to this file", */
+      "-write filename      write image to this file",
       (char *) NULL
     };
 
@@ -7878,7 +7878,7 @@ MagickExport unsigned int MogrifyImage(const ImageInfo *image_info,
   for (i=0; i < argc; i++)
   {
     option=argv[i];
-    if ((strlen(option) <= 1) || ((*option != '-') && (*option != '+')))
+    if ((strlen(option) <= 1) || ((option[0] != '-') && (option[0] != '+')))
       continue;
     switch (*(option+1))
     {
@@ -9839,6 +9839,27 @@ MagickExport unsigned int MogrifyImage(const ImageInfo *image_info,
             (void) WhiteThresholdImage(*image,argv[i]);
             continue;
           }
+        if (LocaleCompare("write",option+1) == 0)
+          {
+            /*
+              Write current image to specified file.
+            */
+            Image
+              *clone_image;
+
+            ++i;
+            clone_image=CloneImage(*image,0,0,MagickTrue,&(*image)->exception);
+            if (clone_image != (Image *) NULL)
+              {
+                (void) strlcpy(clone_image->filename,argv[i],sizeof(clone_image->filename));
+                (void) WriteImage(clone_info,clone_image);
+                if (clone_info->verbose)
+                  (void) DescribeImage(clone_image,stdout,False);
+                DestroyImage(clone_image);
+                clone_image=(Image *) NULL;
+              }
+            continue;
+          }
         break;
       }
       default:
@@ -9946,12 +9967,8 @@ MagickExport unsigned int MogrifyImages(const ImageInfo *image_info,
     *option;
 
   Image
-    *clone_images,
     *image,
     *mogrify_images;
-
-  ImageInfo
-    *clone_info;
 
 /*   MonitorHandler */
 /*     handler; */
@@ -9972,7 +9989,6 @@ MagickExport unsigned int MogrifyImages(const ImageInfo *image_info,
   assert((*images)->signature == MagickSignature);
   if ((argc <= 0) || (*argv == (char *) NULL))
     return(True);
-  clone_images=(Image *) NULL;
   scene=False;
   for (i=0; i < argc; i++)
   {
@@ -9985,12 +10001,6 @@ MagickExport unsigned int MogrifyImages(const ImageInfo *image_info,
       {
         if (LocaleCompare("scene",option+1) == 0)
           scene=True;
-        break;
-      }
-      case 'w':
-      {
-        if (LocaleCompare("+write",option) == 0)
-          clone_images=CloneImageList(*images,&(*images)->exception);
         break;
       }
       default:
@@ -10026,7 +10036,7 @@ MagickExport unsigned int MogrifyImages(const ImageInfo *image_info,
   for (i=0; i < argc; i++)
   {
     option=argv[i];
-    if ((strlen(option) == 1) || ((*option != '-') && (*option != '+')))
+    if ((strlen(option) == 1) || ((option[0] != '-') && (option[0] != '+')))
       continue;
     switch (*(option+1))
     {
@@ -10199,33 +10209,6 @@ MagickExport unsigned int MogrifyImages(const ImageInfo *image_info,
               }
             MagickFreeMemory(token);
             continue;
-          }
-        break;
-      }
-      case 'w':
-      {
-        if (LocaleCompare("write",option+1) == 0)
-          {
-            /*
-              FIXME: It turns out that -write/+write support is
-              completely broken due to GraphicsMagick reading the
-              input images first, and then applying intermediate
-              commands in order.  If the command line was only
-              executed in the order specified then it would work.
-            */
-            if (option[0] == '-')
-              {
-                clone_info=CloneImageInfo(image_info);
-                status&=WriteImages(clone_info,mogrify_images,argv[++i],
-                                    &mogrify_images->exception);
-                DestroyImageInfo(clone_info);
-              }
-            else if (option[0] == '+')
-              {
-                DestroyImageList(mogrify_images);
-                mogrify_images=clone_images;
-              }
-            break;
           }
         break;
       }
