@@ -1,4 +1,4 @@
-.TH gm 1 "2008/12/11" "GraphicsMagick"
+.TH gm 1 "2008/12/12" "GraphicsMagick"
 .TP
 .in 15
 .in 15
@@ -3749,6 +3749,17 @@ unique colors than the target window colormap allows.  Use
 \fRspecify the window group
 .TP
 .B "-write \fI<filename>"\fP
+\fRwrite an intermediate image [\fIconvert, composite\fP]
+
+The current image is written to the specified filename and then
+processing continues using that image. The following is an example of how
+several sizes of an image may be generated in one command (repeat as
+often as needed):
+
+    gm convert input.jpg -resize 50% -write input50.jpg
+      -resize 25% input25.jpg
+.TP
+.B "-write \fI<filename>"\fP
 \fRwrite the image to a file [\fIdisplay\fP]
 
 If \fIfilename\fP already exists, you will be prompted as to whether it should
@@ -4550,6 +4561,9 @@ Options, above.
 .TP
 .B "-white-point \fI<x>,<y>"\fP
 \fRchromaticity white point
+.TP
+.B "-write \fI<filename>"\fP
+\fRwrite an intermediate image [\fIconvert, composite\fP]
 
 For a more detailed description of each option, see
 Options, above.
@@ -5597,6 +5611,9 @@ Options, above.
 .TP
 .B "-white-threshold \fIred[,green][,blue][,opacity]"\fP
 \fRpixels above the threshold become white
+.TP
+.B "-write \fI<filename>"\fP
+\fRwrite an intermediate image [\fIconvert, composite\fP]
 
 For a more detailed description of each option, see
 Options, above.
