@@ -21,6 +21,16 @@
 </tr>
 </table>
 <p>
+2008-12-12  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/command.c (MogrifyImage): The -write option was not
+        implemented in a useful fashion and the +write option never worked
+        at all.  Re-implement -write and eliminate +write from the
+        documentation since +write is not needed.
+
+</UL>
+<p>
 2008-12-11  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
